# GAL-DAWN

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Draw_figure.py  README.md  access.h  bf.txt  check.txt  check1.txt  cmakelistsforcpu.txt  convert.cu  dawn.hpp  dawn_cpu.cu  dawn_cpu_big.cu  dawn_cpu_v2.cu  dawn_cpu_v3.cu  dawn_cpu_v4.cu  dawn_gpu.cu  dawn_gpu_v2.cu  gre.txt  output.txt  output_1.txt  process_v2v.sh  readmeforCPU.md  sssp copy.txt  sssp.txt
Expire/: back_up.cu  dawn_backup1.cuh  dawn_backup2.cuh  dawn_beta.cuh  dawn_cpu_big.cu  dawn_cpu_v1.0RC.cu  dawn_cpu_v2.cu  dawn_cpu_v3.cu  dawn_gpu.cu  dawn_gpu_v1.0RC.cu  dawn_gpu_v3.cu  debug_gpu_v2.cu  timer.hpp
MPI/: CMakeLists.txt
algorithm/: CMakeLists.txt
algorithm/apsp_cpu/: apsp_cpu.cpp
algorithm/apsp_gpu/: CMakeLists.txt
algorithm/cpu/: CMakeLists.txt
algorithm/cpu/apsp_cpu/: CMakeLists.txt  apsp_cpu.cpp
algorithm/cpu/bc_cpu/: CMakeLists.txt  bc_cpu.cpp
algorithm/cpu/bfs_cpu/: CMakeLists.txt  bfs_cpu.cpp
algorithm/cpu/cc_cpu/: CMakeLists.txt  cc_cpu.cpp
algorithm/cpu/mssp_cpu/: CMakeLists.txt  mssp_cpu.cpp
algorithm/cpu/sssp_cpu/: CMakeLists.txt  sssp_cpu.cpp
algorithm/gabps/: bfs.cc
algorithm/gpu/: CMakeLists.txt
algorithm/gpu/apsp_gpu/: CMakeLists.txt  apsp_gpu.cu
algorithm/gpu/bfs_gpu/: CMakeLists.txt  bfs_gpu.cu
algorithm/gpu/cc_gpu/: CMakeLists.txt  cc_gpu.cu
algorithm/gpu/mssp_gpu/: CMakeLists.txt  mssp_gpu.cu
algorithm/gpu/sssp_gpu/: CMakeLists.txt  sssp_gpu.cu
algorithm/mssp_cpu/: CMakeLists.txt  mssp_cpu.cpp
algorithm/mssp_gpu/: mssp_gpu.cu
algorithm/sssp_cpu/: sssp_cpu.cpp
apsp/: CMakeLists.txt  apsp.cu  dawn_cpu_apsp.cpp  dawn_cpu_v1.cpp  dawn_cpu_v1.cu  dawn_gpu_apsp.cu  dawn_gpu_v1.cu
backup/: avx.cpp  compression.cu  jzj.cpp
cpu/: CMakeLists.txt  convert.cpp  dawn.hpp  dawn_cpu_sssp.cpp  dawn_cpu_v1.cpp  readme.md
document/: Code_Guide.md  Decumentation_v1.md  Decumention_v1.md  Documentation.md  Quick_Start.md  dawn_cpu_decumention.md
gunrock/: apsp.cu  readme.md
include/: access.h  dawn.cuh  dawn.hpp  dawn.hxx  graph.cpp  run.cpp  tool.cpp
include/dawn/: access.h  dawn.cuh  dawn.hxx  graph.hxx  include.hxx  io.hxx  matrix.hxx  parameters.hxx  tool.hxx
include/dawn/algorithm/cpu/: apsp.hxx  bc.hxx  bfs.hxx  cc.hxx  mssp.hxx  sssp.hxx
include/dawn/algorithm/gpu/: apsp.cuh  bc.cuh  bfs.cuh  cc.cuh  mssp.cuh  sgemv.cuh  spgemm.cuh  spmv.cuh  sssp.cuh
ining/data_preprocessing/: create.py  nx.py
ining/dense_cpu/: CMakeLists.txt  access.h  dense0.cpp  in1.txt  v_bitset.cpp
ining/dense_cpu/bitset/: CMakeLists.txt  timer.hpp  v_bitset.cpp
ining/sparse_cpu/: CMakeLists.txt  sparse.cpp  sparse1.cpp  sparse2.cpp  sparse3.cpp
ining/sparse_cpu/final_version/: CMakeLists.txt  access.h  sparse.cpp  timer.hpp
ining/sparse_cpu/old_version/: sparse0.cpp  sparse2.cpp
ining/sparse_gpu/: demo.py
ining_final/: CMakeLists.txt  demo.cu
mssp/: dawn_cpu_mssp.cpp  dawn_gpu_mssp.cu
refactor/: demo.cpp  demo.cu
src/: cpu.cpp  gpu.cu  graph.cpp  io.cpp  matrix.cpp  parameters.cpp  run.cpp  run.cu  tool.cpp
src/algorithm/cpu/: apsp.cpp  bc.cpp  bfs.cpp  cc.cpp  mssp.cpp  sssp.cpp
src/algorithm/gpu/: apsp.cu  bc.cu  bfs.cu  cc.cu  mssp.cu  sssp.cu
sssp/: dawn_cpu_sssp.cpp  dawn_cpu_sssp.cu  dawn_gpu_sssp.cu
test/: Performance.md  Test_Guide.md  performance.md  sourceList.txt  spmv.cu  test.cpp  test.cu  test_process.sh
test/gabps/: benchmark.h  bfs.cc  command_line.h
test/gunrock/: CMakeLists.txt  apsp.cu  readme.md
tool/: Decumention_last_version.md  check_bc.py  check_by_networkx.py  check_unweighted.py  check_weighted.py  convert.cu  copyright4repo.sh  draw.py  latency.py  process.sh  process_all.sh  process_v2v.sh  scalability.py  sourceList.py  speedup.py  test_sssp.py
